--- a/Basics/index.html
+++ b/Basics/index.html
@@ -6,6 +6,7 @@
             SAI SAREE CENTER
         </title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     </head>
     <body>
 
@@ -43,22 +44,90 @@
         <main>
             <div class="main-sarees">
                 <div class="Saree">
-                    <a href="#Printed-Saree4"><img  class="image-saree" src="../Images/Webp.net-resizeimage (4).jpg"></a>
-                    <a class="Printed-saree" href="#Printed-Saree4"> Printed Saree</a>
-                    <a class="Price-Saree" href="#Printed-Saree4"> Rs. 200 </a>
+                    <a href="Printed-Saree4.html"><img  class="image-saree" src="../Images/Webp.net-resizeimage (4).jpg"></a>
+                    <a class="Printed-saree" href="Printed-Saree4.html"> Printed Saree</a>
+                    <a class="Price-Saree" href="#Printed-Saree4.html"> Rs. 200 </a>
                 </div>
-                    <a href="#Printed-Saree4"><img class="image-saree" src="..//Images/Webp.net-resizeimage (5).jpg"></a>
-                    <a href="#Printed-Saree4"><img class="image-saree" src="..//Images/Webp.net-resizeimage (6).jpg"></a>
-                    <a href="#Printed-Saree4"><img class="image-saree" src="..//Images/Webp.net-resizeimage (7).jpg"></a>
+                <div class="Saree">
+                    <a href="#Printed-Saree5"><img class="image-saree" src="..//Images/Webp.net-resizeimage (5).jpg"></a>
+                    <a class="Printed-saree" href="#Printed-Saree5"> Printed Saree</a>
+                    <a class="Price-Saree" href="#Printed-Saree5"> Rs. 200 </a>
                 </div>
-                <div>
-                    <a class="Printed-saree" href="#Printed-Saree4"> Printed Saree</a>
-                    <a class="Printed-saree" href="#Printed-Saree5"> Reniyar Printed Saree</a>
+                <div class="Saree">
+                    <a href="#Printed-Saree6"><img class="image-saree" src="..//Images/Webp.net-resizeimage (6).jpg"></a>
                     <a class="Printed-saree" href="#Printed-Saree6"> Printed Saree</a>
+                    <a class="Price-Saree" href="#Printed-Saree6"> Rs. 200 </a>
+                </div>
+                <div class ="Saree">
+                    <a href="#Printed-Saree7"><img class="image-saree" src="..//Images/Webp.net-resizeimage (7).jpg"></a>
                     <a class="Printed-saree" href="#Printed-Saree7"> Printed Saree</a>
+                    <a class="Price-Saree" href="#Printed-Saree7"> Rs. 200 </a>
                 </div>
             </div>
+
         </main>
-        <a href="#">Back To Top</a>
+        <footer>
+            <div class="footer-main">
+                <div class = "Free-shipping">
+                    <a href="#">Free Shipping</a>
+                    <p>Within India On Orders Above Rs.2999 </p>
+                </div>
+                <div class="Free-shipping">
+                    <a href="#">Genuine Products</a>
+                    <p>100% Genuine </p>
+                </div>
+                <div class="Free-shipping">
+                    <a href="#">Secure Products</a>
+                    <p>100% Secure And Save Payment </p>
+                </div>
+                <div class="Free-shipping">
+                    <a href="#">Customer Support</a>
+                    <p>Contact us </p>
+                </div>
+            </div>
+            <div class ="footer-about">
+                <div class = "Information">
+                    <h2>INFORMATION</h2>
+                    <ul>
+                        <li><a href="#AboutUS" title="AboutUS">About Us</a></li>
+                        <li><a href="#terms" title="Conditions">Terms & Conditions</a></li>
+                        <li><a href="#policy" title="Policy">Privacy Policy</a></li>
+                        <li><a href="#cashOnDelivery" title="COD">Cash On Delivery</a></li>
+                        <li><a href="#Partner" title="Partner">Logistic Partner</a></li>
+                    </ul>
+                </div>
+
+                <div class = "Connect">
+                    <h2>CONNECT WITH US</h2>
+                    <ul>
+                        <li><a href="#Instagram" title="Instagram"><i class="fa-brands fa-instagram"></i> Instagram</a></li>
+                        <li><a href="#Facebook" title="Facebook"><i class="fa-brands fa-facebook-square"></i> Facebook</a></li>
+                        <li><a href="#Pinterest" title="Pinterest"><i class="fa-brands fa-pinterest"></i> Pinterest</a></li>
+                        <li><a href="#Linkldn" title="Linkedln"><i class="fa-brands fa-linkedin"></i> Linkedln</a></li>
+                        <li><a href="#Youtube" title="Youtube"><i class="fa-brands fa-youtube"></i> Youtube</a></li>
+                    </ul>
+                </div>
+                <div class="vertical-line">
+                </div>
+                <div class="Need">
+                        <h2>Need A Support ?</h2>
+                        <ul>
+                            <li><a href="#WriteUs" title="WriteUs"><i class="fa-solid fa-pen"></i>  Write Us</a></li>
+                            <li><a href="#Address" title="Address"><i class="fa-solid fa-house"></i> Address</a></li>
+                            <li><a style = "font-weight: bold;">ADMIN</a></li>
+                            <li><a href="#Admin" title="Admin"><i class="fa-solid fa-user"></i> Mani Bansal</a></li>
+                            <li><a href="#Contact" title="Contact"><i class="fa-solid fa-phone"></i> 7248655958</a></li>
+                        </ul>
+                </div>
+            </div>
+                <div class="copyright">
+                    <div class="backtotop">
+                        <a href="#"><i class="fa-solid fa-arrow-up"></i></a>
+                    </div>
+                    <p>
+                        <i class="fa-regular fa-copyright"></i> Sai Saree Center @2022. All Rights Reserved.
+                    </p>
+                </div>
+        </footer>
     </body>
 </html>
